--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <h3 class="heading"><a href="">A data analytics project is coming soon!!!</a></h3>
+                <p>I am working rigorously on a data analytics project.Please wait until it completes.</p>
               </div>
             </div>
           </div>
